# ppo-hws

./: .gitignore
hw1/: build.gradle.kts
hw1/src/main/kotlin/: LRUCache.kt
hw1/src/test/kotlin/: LRUCacheImplTest.kt
hw2/: build.gradle
hw2/src/main/java/: PostsClient.java  PostsManager.java  RequestSender.java  TestMain.java  Utils.java
hw2/src/test/java/: PostsClientIntegrationTest.java  PostsClientTest.java  PostsManagerTest.java  RequestSenderStubTest.java  RequestSenderTest.java  UtilsTest.java
hw3/: pom.xml  start_db.db
hw3/src/main/java/ru/akirakozov/sd/refactoring/: DBManager.java  HtmlBuilder.java  Main.java
hw3/src/test/java/: AddProductServletTest.java  Common.java  GetProductServletTest.java  QueryServletTest.java  ServletTest.java
hw4/src/main/resources/static/css/: styles.css
hw4/src/main/resources/templates/: index.html
hw5/: Cargo.toml
hw5/src/lib/: drawing_api.rs  mod.rs  utils.rs
hw5/src/lib/apis/: draw.rs  mod.rs  simple_svg.rs
hw5/src/lib/graph/: mod.rs  node_projectors.rs  traits.rs
hw5/src/lib/graph/graph_impls/: list_graph_impl.rs  matrix_graph_impl.rs  mod.rs
hw6/: Cargo.toml
hw6/src/lib/: mod.rs  token.rs  tokenizer.rs
hw6/src/lib/visitors/: calc_visitor.rs  mod.rs  parser_visitor.rs  print_visitor.rs
hw8/: Cargo.toml
hw8/src/: clock.rs  events_statistics.rs  mod.rs
sem2/hw1/: Cargo.toml
sem2/hw1/src/: actors.rs  browser.rs  main.rs  results_getter.rs  server.rs
sem2/hw2/: Cargo.toml  create_table.sql
sem2/hw2/src/: config.rs  domain.rs  main.rs  queries.rs
sem2/hw3/client/: Cargo.toml
sem2/hw3/client/src/: lib.rs  market_client.rs
sem2/hw3/client/tests/: integration_tests.rs
sem2/hw3/hw3/: Cargo.toml
sem2/hw3/hw3/src/api/: mod.rs
sem2/hw3/hw3/src/services/: exchange_monitor.rs  mongodb.rs
sem2/hw3/market/: Cargo.toml  Dockerfile
sem2/hw3/market/src/: main.rs
sem2/hw3/market/src/api/: mod.rs
sem2/hw3/market/src/services/: market.rs
sem2/hw4/hw3/src/: main.rs
sem2/hw4/hw3/src/model/: item.rs  user.rs
sem2/hw4/hw3/src/services/: mod.rs
sem2/hw4/hw3_client/: Cargo.toml
sem2/hw4/hw3_client/src/: main.rs
(+10 files in other folders)
