[package]
name = "hw5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draw = "0.3.0"
simplesvg = "0.4.0"
open = "1.7.0"
petgraph = "0.6.2"
clap = { version = "4.0.29", features = ["derive"] }
rand = "0.8.5"

[[bin]]
name = "draw"

[[bin]]
name = "generate_graphs"

[lib]
name = "my_lib"
path = "src/lib/mod.rs"
