[package]
name = "hw1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
futures = "0.3.4"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2.2"
wiremock = "0.5.17"
