[package]
name = "hw2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = "0.4.5"
postgres-es = "0.4.5"
chrono = { version = "0.4.23", features = ["serde"] }
thiserror = "1.0.38"
serde = "1.0.152"
futures = "0.3.26"
# anyhow = "1.0.51"
async-trait = "0.1.52"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
sqlx = "0.6.2"
axum = "0.6.10"
