[package]
name = "hw3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.153", features = ["derive"] }
env_logger = "0.10.0"
mongodb = "2"
thiserror = "1.0.39"
futures = "0.3.26"
wiremock = "0.5.17"
