[package]
name = "market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.153", features = ["derive"] }
env_logger = "0.10.0"
thiserror = "1.0.39"
futures = "0.3.26"
rand = "0.8.5"
